--- a/projects/calculator/calculator.css
+++ b/projects/calculator/calculator.css
@@ -2,3 +2,26 @@
   width: 40%;
   background-color: grey;
 }
+
+#output {
+  text-align: right;
+}
+
+#buttons {
+  width: 100%;
+}
+
+button {
+  border: 1px solid black;
+  background-color: #ccc;
+  width: auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 25%;
+}
