--- a/projects/calculator/calculator.css
+++ b/projects/calculator/calculator.css
@@ -1,27 +1,27 @@
 #calc-body {
   width: 40%;
   background-color: grey;
+  margin-top: 40px;
+  border: 1px solid black;
+  border-radius: 3px;
 }
 
 #output {
-  text-align: right;
-}
-
-#buttons {
   width: 100%;
+  font-size: 3em;
+  font-weight: bolder;
+  margin: 4px;
+  margin-right: 4px;
+  text-align: right;
+  background-color: black;
+  color: white;
 }
 
-button {
-  border: 1px solid black;
-  background-color: #ccc;
-  width: auto;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.column {
-  flex: 25%;
+p {
+  margin: 2px;
+  border: 1px sold black;
+  background-color: #eee;
+  text-align: center;
+  padding: 12px;
+  font-size: 2em;
 }
