--- a/projects/pomodoro/2/clock.css
+++ b/projects/pomodoro/2/clock.css
@@ -4,9 +4,13 @@ button {
     border-radius: 8px;
     border: 4px solid black;
     padding: 12px;
+    transition-duration: 0.3s;
 }
 
-
+button:hover {
+    background-color: grey;
+    border: 4px solid grey;
+}
 
 #title {
     margin: 20px;
@@ -15,16 +19,19 @@ button {
 
 #clock {
     display: flex;
-    margin: 20px;
+    height: 400px;
+    margin: 5%;
     padding: 10px;
-    padding-left: 35%;
+    padding-left: 30%;
     border: 4px solid black;
     align-items: center;
 }
 
 #break {
+    width: 10%;
     margin: 13px;
     border: 2px solid black;
+    border-radius: 4px;
 }
 
 #break-display {
@@ -52,7 +59,10 @@ button {
 }
 
 #time {
+    width: 10%;
     margin: 13px;
+    border: 2px solid black;
+    border-radius: 4px;
 }
 
 #time-display {
