--- a/projects/pomodoro/2/drum_machine.css
+++ b/projects/pomodoro/2/drum_machine.css
@@ -1,12 +1,32 @@
 .drum-pad {
     border-radius: 50%;
     border: 2px solid black;
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 50px;
     text-align: center;
+    margin: 10px;
+    align-items: center;
+    background-color: aquamarine;
+    opacity: 0.5;
+    transition-duration: 0.1s;
+}
+
+.drum-pad:hover {
+    opacity: 1.0;
 }
 
 #drum-machine {
     display: flex;
     align-items: flex-end;
+}
+
+#display {
+    width: 10%;
+    padding: 15px;
+    border: 2px solid black;
+    text-align: center;
+    color: blue;
+    border-radius: 14px;
+    margin: 20px;
+    height: 40px;
 }
